# aoc-2024

./: .gitignore  CMakeLists.txt  flake.nix
.cache/clangd/index/: main.cpp.660C6AE2FA197CF1.idx
